--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1,7 +1,19 @@
+:root {
+
+    --font-family: "GongGothicMedium";
+}
+
+@font-face {
+    font-family: 'GongGothicMedium';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-10@1.0/GongGothicMedium.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 html {
     font-size: 14px;
     body {
         margin: 0;
+        font-family: 'GongGothicMedium' !important;
         // background-color: var(--gray-50);
     }
 }
@@ -219,7 +231,7 @@ input:disabled, button:disabled {
 
 .navSummary {
     display: inline-block;
-    margin-left: 3rem;
+    margin-left: 2rem;
     .summItem {
         display: flex;
         align-items: center;
