change font again

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1,19 +1,23 @@
+@import url('http://fonts.googleapis.com/earlyaccess/nanumgothic.css');
+
 :root {
-    --font-family: "GongGothicLight";
+    // --font-family: "GongGothicLight";
+    --font-family: 'Nanum Gothic', sans-serif;
 }
 
-@font-face {
-    font-family: "GongGothicLight";
-    src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-10@1.0/GongGothicLight.woff")
-        format("woff");
-    font-weight: normal;
-    font-style: normal;
-}
+// @font-face {
+//     font-family: "GongGothicLight";
+//     src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-10@1.0/GongGothicLight.woff")
+//         format("woff");
+//     font-weight: normal;
+//     font-style: normal;
+// }
 html {
     font-size: 14px;
     body {
         margin: 0;
-        font-family: "GongGothicLight" !important;
+        font-family: 'Nanum Gothic', sans-serif;
+        // font-family: "GongGothicLight" !important;
         // background-color: var(--gray-50);
     }
 }
