--- a/public/themes/aura-dark-purple/theme.css
+++ b/public/themes/aura-dark-purple/theme.css
@@ -1,8 +1,10 @@
 :root {
-  font-family: "GongGothicLight";
+  /* font-family: "GongGothicLight"; */
+  font-family: 'Nanum Gothic', sans-serif;
   font-feature-settings: "cv02", "cv03", "cv04", "cv11";
   font-variation-settings: normal;
-  --font-family: "GongGothicLight";
+  /* --font-family: "GongGothicLight"; */
+  --font-family: 'Nanum Gothic', sans-serif;
   --font-feature-settings: "cv02", "cv03", "cv04", "cv11";
   --text-color: #ffffff;
   --text-color-secondary: #a1a1aa;
