--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1,9 +1,12 @@
-@import url('http://fonts.googleapis.com/earlyaccess/nanumgothic.css');
+// @import url('http://fonts.googleapis.com/earlyaccess/nanumgothic.css');
+
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap');
 
 :root {
     // --font-family: "GongGothicLight";
     --font-family: 'Nanum Gothic', sans-serif;
 }
+
 
 // @font-face {
 //     font-family: "GongGothicLight";
